Membuat Fitur Berita dengan Id (GET), Dokumentasi.
